--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-vega": "^7.6.0",
     "react-vega-lite": "^6.1.0",
     "styled-components": "^5.3.5",
